@@ -1,5 +1,11 @@
 2014-10-10  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/63379
+	* tree-vect-slp.c (vect_get_constant_vectors): Do not compute
+	a neutral operand for min/max when it is not a reduction chain.
+
+2014-10-10  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/63476
 	* tree-ssa-pre.c (struct bb_bitmap_sets): Add vop_on_exit member.
 	(BB_LIVE_VOP_ON_EXIT): New define.
